fix the horizontal spacing of the harness a little

--- a/app/assets/stylesheets/canvas.css
+++ b/app/assets/stylesheets/canvas.css
@@ -19,6 +19,7 @@ body {
   background: white url(/assets/grid.jpg);
   font-family: "Helvetica Neue", sans-serif;
   padding-left: 35%;
+  margin-right: 16px;
 }
 
 
